--- a/src/main/resources/static/Partidos.html
+++ b/src/main/resources/static/Partidos.html
@@ -9,12 +9,18 @@
         <div>
             <h1 style= "text-align: center;">Partidos de hoy</h1>
             <br>
+            <a href="index1.html"> Pagina Principal</a>
+            <br>
+            <br>
+            <br>
             <h2>Liga de Fútbol de Primera División</h2>
             <h2>Jornada 27</h2>
             <br>
             <h3><i>Deportivo Saprissa vs Liga Deportiva Alajuelense</i></h3> <h4>Hoy a las 20:15</h4>
+            <img src="static.images/Clasico.png" alt="Deportivo Saprissa vs Liga Deportiva Alajuelensen" width="600"/>
             <br>
             <h3><i>Santos de Guapiles vs Grecia</i></h3> <h4>Hoy a las 17:30</h4>
+            <img src="images/Partido1.png" alt="Santos de Guapiles vs Grecia" width="600"/>
             <br>
             <br>
             <br>
@@ -23,6 +29,7 @@
             <h2>Jornada 20</h2>
             <br>
             <h3><i>Athletic Club vs Cadiz CF</i></h3> <h4>En juego</h4>
+            <img src="images/Partido2.png" alt="Athletic Club vs Cadiz CF" width="600"/>
         </div>
     </body>
 </html>
