--- a/src/main/resources/static/Marcadores.html
+++ b/src/main/resources/static/Marcadores.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
+
 <html>
-    <head>
-        <title>TODO supply a title</title>
+        <head>
+        <title>Marcadores</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            <h1 style= "text-align: center;">Marcadores</h1>
+            <br>
+            <a href="index1.html"> Pagina Principal</a>
+            <a href="#Ayer">Ayer</a>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>Partidos Hoy</h1>
+            <br>
+            <br>
+            <br>
+            <h2>Liga de Fútbol de Primera División</h2>
+            <h2>Jornada 27</h2>
+            <br>
+            <h3><i>Deportivo Saprissa vs Liga Deportiva Alajuelense</i></h3> <h4>Saprissa 1-1 Alajuelense</h4>
+            <br>
+            <h3><i>Santos de Guapiles vs Grecia</i></h3> <h4>Guapiles 2-1 Grecia</h4>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>LaLiga</h2>
+            <h2>Jornada 20</h2>
+            <br>
+            <h3><i>Athletic Club vs Cadiz CF</i></h3> <h4>Athletic Club 4-1 Cadiz</h4>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>Partidos Ayer</h1>
+            <br>
+            <br>
+            <h2>LaLiga</h2>
+            <a name="Ayer"></a>
+            <h2>Jornada 17</h2>
+            <BR>
+            <h3><i>Real Madrid vs Valencia</i></h3> <h4>Real Madrid 2-0 Valencia</h4>
+            
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <footer id="piePagina">
+            Derechos reservados &COPY; 2023 <address class="lineaDireccion">Cedros Montes de Oca</address> <address class="lineaDireccion">8877-4411</address>
+        </footer>
     </body>
 </html>
