--- a/src/main/resources/static/Partidos.html
+++ b/src/main/resources/static/Partidos.html
@@ -17,10 +17,10 @@
             <h2>Jornada 27</h2>
             <br>
             <h3><i>Deportivo Saprissa vs Liga Deportiva Alajuelense</i></h3> <h4>Hoy a las 20:15</h4>
-            <img src="static.images/Clasico.png" alt="Deportivo Saprissa vs Liga Deportiva Alajuelensen" width="600"/>
+            <img src="..static.images/Clasico.png" alt="Deportivo Saprissa vs Liga Deportiva Alajuelensen" width="600"/>
             <br>
             <h3><i>Santos de Guapiles vs Grecia</i></h3> <h4>Hoy a las 17:30</h4>
-            <img src="images/Partido1.png" alt="Santos de Guapiles vs Grecia" width="600"/>
+            <img src="..static.images/Partido1.png" alt="Santos de Guapiles vs Grecia" width="600"/>
             <br>
             <br>
             <br>
@@ -29,7 +29,15 @@
             <h2>Jornada 20</h2>
             <br>
             <h3><i>Athletic Club vs Cadiz CF</i></h3> <h4>En juego</h4>
-            <img src="images/Partido2.png" alt="Athletic Club vs Cadiz CF" width="600"/>
+            <img src="..static.images/Partido2.png" alt="Athletic Club vs Cadiz CF" width="600"/>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <footer id="piePagina">
+            Derechos reservados &COPY; 2023 <address class="lineaDireccion">Cedros Montes de Oca</address> <address class="lineaDireccion">8877-4411</address>
+        </footer>
     </body>
 </html>
