--- a/src/main/resources/static/Highlights.html
+++ b/src/main/resources/static/Highlights.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Highlights</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+            <h1 style= "text-align: center;">Highlights</h1>
+            <br>
+            <a href="index1.html"> Pagina Principal</a>
+            <br>
+            <br>
+            <br>
+        <article>
+            <header>
+                <h2>Highlights Real Madrid</h2>
+            </header>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WWM0l-__nOg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <footer>Highlights Real Madrid vs Juventus</footer>
+            </article>
+            <br>
+            <br>
+            <br>
+            <br>
+            <article>
+            <header>
+                <h2>Highlights Barcelona</h2>
+            </header>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/kzKeJ-w6xfs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <footer>Barcelona vs PSG</footer>
+            </article>
+            <br>
+            <br>
+            <br>
+            <br>
+            <article>
+            <header>
+                <h2>Highlights PSG</h2>
+            </header>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ImntsoxN9_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <footer>PSG vs Riyadh All-Star XI </footer>
+            </article>
     </body>
 </html>
