--- a/src/main/resources/static/Marcadores.html
+++ b/src/main/resources/static/Marcadores.html
@@ -4,13 +4,24 @@
         <head>
         <title>Marcadores</title>
         <meta charset="UTF-8">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <header id="encabezado">
+        <h1>Futbol Oficial</h1>
+        <br/>
+        </header>
         <div>
             <h1 style= "text-align: center;">Marcadores</h1>
             <br>
+            <nav id="menu">
             <a href="index1.html"> Pagina Principal</a>
             <a href="#Ayer">Ayer</a>
+            </nav>
+            <section id="contenido">
+            <header>
+            <h1 style= "text-align: center;">Partidos de hoy</h1>
+            </header>
             <br>
             <br>
             <br>
