--- a/src/main/resources/static/Partidos.html
+++ b/src/main/resources/static/Partidos.html
@@ -4,23 +4,32 @@
         <head>
         <title>Partidos</title>
         <meta charset="UTF-8">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <header id="encabezado">
+        <h1>Futbol Oficial</h1>
+        <br/>
+        </header>
         <div>
-            <h1 style= "text-align: center;">Partidos de hoy</h1>
+
             <br>
+            <nav id="menu">
             <a href="index1.html"> Pagina Principal</a>
-            <br>
-            <br>
+        </nav>
+                    <section id="contenido">
+            <header>
+            <h1 style= "text-align: center;">Partidos de hoy</h1>
+            </header>
             <br>
             <h2>Liga de Fútbol de Primera División</h2>
             <h2>Jornada 27</h2>
             <br>
             <h3><i>Deportivo Saprissa vs Liga Deportiva Alajuelense</i></h3> <h4>Hoy a las 20:15</h4>
-            <img src="..static.images/Clasico.png" alt="Deportivo Saprissa vs Liga Deportiva Alajuelensen" width="600"/>
+            <img src="images/Clasico.png" alt="Deportivo Saprissa vs Liga Deportiva Alajuelense" width="300"/>
             <br>
             <h3><i>Santos de Guapiles vs Grecia</i></h3> <h4>Hoy a las 17:30</h4>
-            <img src="..static.images/Partido1.png" alt="Santos de Guapiles vs Grecia" width="600"/>
+            <img src="images/Partido1.png" alt="Santos de Guapiles vs Grecia" width="300"/>
             <br>
             <br>
             <br>
@@ -29,7 +38,7 @@
             <h2>Jornada 20</h2>
             <br>
             <h3><i>Athletic Club vs Cadiz CF</i></h3> <h4>En juego</h4>
-            <img src="..static.images/Partido2.png" alt="Athletic Club vs Cadiz CF" width="600"/>
+            <img src="images/Partido2.png" alt="Athletic Club vs Cadiz CF" width="300"/>
         </div>
         <br>
         <br>
