--- a/src/main/resources/static/Cuenta.html
+++ b/src/main/resources/static/Cuenta.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Cuenta</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1 style= "text-align: center;">Bienvenido a tu cuenta</h1>
+                    <a href="index1.html"> Pagina Principal</a>
+        <br>
+        <br>
+        <br>
+        <label>Usuario: </label><input type="text" id="text" placeholder="Nombre de Usuario" size="14" /><br/>
+        <br>
+        <br>
+        <br>
+        <label>Email: </label><input type="email" name="email" placeholder="a-z@a-z.xxx" /><br/>
+        <br>
+        <br>
+        <br>
+        <label>Fecha de nacimiento: </label><input type="date" name="date" min="2001-01-01" max="2023-12-31" /><br/>
+        <br>
+        <br>
+        <br>
+        <label>Contraseña: </label><input type="password" name="password" /><br/>
+        <br>
+        <br>
+        <br>
+        <label>Terminos y condiciones</label><input type="checkbox" id="checkbox" /><br/>
     </body>
 </html>
