--- a/src/main/resources/static/Equipos.html
+++ b/src/main/resources/static/Equipos.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Equipos</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div><h1 style= "text-align: center;">Elige a tu equipos favorito</h1></div>
+        <br>
+            <a href="index1.html"> Pagina Principal</a>
+            <br>
+            <br>
+            <br>
+        <label>Real Madrid</label><input type="radio" name="radio" value="1" /><br/>
+        <label>FC Barcelona</label><input type="radio" name="radio" value="2" /><br/>
+        <label>PSG</label><input type="radio" name="radio" value="3" /><br/>
+        <label>Deportivo Saprissa</label><input type="radio" name="radio" value="4" /><br/>
+        <label>Liverpool</label><input type="radio" name="radio" value="5" /><br/>
+        <label>Manchester United</label><input type="radio" name="radio" value="6" /><br/>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <label>submit</label><input type="submit" name="submit" value="submit" /><br/>
+        <br>
+        <br>
+        <br>
+        <footer id="piePagina">
+            Derechos reservados &COPY; 2023 <address class="lineaDireccion">Cedros Montes de Oca</address> <address class="lineaDireccion">8877-4411</address>
+        </footer>
     </body>
 </html>
