--- a/src/main/resources/static/Idioma.html
+++ b/src/main/resources/static/Idioma.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Idioma</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1 style= "text-align: center;">Idioma</h1>
+            <br>
+            <a href="index1.html"> Pagina Principal</a>
+            <br>
+            <br>
+            <br>
+        <label>Español</label><input type="radio" name="radio" value="1" /><br/>
+        <label>English</label><input type="radio" name="radio" value="2" /><br/>
+        <label>Français</label><input type="radio" name="radio" value="3" /><br/>
+        <br>
+        <br>
+        <br>
+        <label>reset</label><input type="reset" name="reset" value="Limpiar" /><br/>
+        <br>
+        <br>
+        <label>submit</label><input type="submit" name="submit" value="submit" /><br/>
+        <br>
+        <br>
+        <br>
+        <footer id="piePagina">
+            Derechos reservados &COPY; 2023 <address class="lineaDireccion">Cedros Montes de Oca</address> <address class="lineaDireccion">8877-4411</address>
+        </footer>
     </body>
 </html>
