--- a/src/main/resources/static/Competiciones.html
+++ b/src/main/resources/static/Competiciones.html
@@ -6,9 +6,22 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-<div><h1 style= "text-align: center;">Elige a tu equipos favorito</h1></div>
-        <br>
+        <header id="encabezado">
+        <h1>Futbol Oficial</h1>
+        <br/>
+        </header>
+                <div>
+
+            <br>
+            <nav id="menu">
             <a href="index1.html"> Pagina Principal</a>
+        </nav>
+                                <section id="contenido">
+            <header>
+            <h1 style= "text-align: center;">Competiciones</h1>
+            </header>
+<div><h1 style= "text-align: center;">Elige tu competicion favorita</h1></div>
+        <br>
             <br>
             <br>
             <br>
@@ -27,6 +40,7 @@
         <br>
         <br>
         <br>
+        </div>
         <footer id="piePagina">
             Derechos reservados &COPY; 2023 <address class="lineaDireccion">Cedros Montes de Oca</address> <address class="lineaDireccion">8877-4411</address>
         </footer>
