--- a/src/main/resources/static/Cuenta.html
+++ b/src/main/resources/static/Cuenta.html
@@ -6,8 +6,23 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+           </head>
+    <body>
+        <header id="encabezado">
+        <h1>Futbol Oficial</h1>
+        <br/>
+        </header>
+        <div>
+
+            <br>
+            <nav id="menu">
+            <a href="index1.html"> Pagina Principal</a>
+        </nav>
+                    <section id="contenido">
+            <header>
+            <h1 style= "text-align: center;">Partidos de hoy</h1>
+            </header>
         <h1 style= "text-align: center;">Bienvenido a tu cuenta</h1>
-                    <a href="index1.html"> Pagina Principal</a>
         <br>
         <br>
         <br>
@@ -28,5 +43,13 @@
         <br>
         <br>
         <label>Terminos y condiciones</label><input type="checkbox" id="checkbox" /><br/>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <footer id="piePagina">
+            Derechos reservados &COPY; 2023 <address class="lineaDireccion">Cedros Montes de Oca</address> <address class="lineaDireccion">8877-4411</address>
     </body>
 </html>
