--- a/src/main/resources/static/Highlights.html
+++ b/src/main/resources/static/Highlights.html
@@ -6,9 +6,19 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-            <h1 style= "text-align: center;">Highlights</h1>
+                <header id="encabezado">
+        <h1>Futbol Oficial</h1>
+        <br/>
+        </header>
             <br>
+            <div>
+            <nav id="menu">
             <a href="index1.html"> Pagina Principal</a>
+            </nav>
+                    <section id="contenido">
+            <header>
+            <h1 style= "text-align: center;">Highlights</h1>
+            </header>
             <br>
             <br>
             <br>
@@ -41,5 +51,14 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ImntsoxN9_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <footer>PSG vs Riyadh All-Star XI </footer>
             </article>
+         </div>
+            <footer id="piePagina">
+            Derechos reservados &COPY; 2023 <address class="lineaDireccion">Cedros Montes de Oca</address> <address class="lineaDireccion">8877-4411</address>
+        </footer>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </body>
 </html>
