--- a/src/main/resources/static/Marcadores.html
+++ b/src/main/resources/static/Marcadores.html
@@ -20,7 +20,7 @@
             </nav>
             <section id="contenido">
             <header>
-            <h1 style= "text-align: center;">Partidos de hoy</h1>
+            <h1 style= "text-align: center;">Marcadores</h1>
             </header>
             <br>
             <br>
