--- a/src/main/resources/static/Idioma.html
+++ b/src/main/resources/static/Idioma.html
@@ -6,9 +6,19 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <h1 style= "text-align: center;">Idioma</h1>
-            <br>
+        <header id="encabezado">
+        <h1>Futbol Oficial</h1>
+        <br/>
+        </header>
+        <div>
+        <nav id="menu">
             <a href="index1.html"> Pagina Principal</a>
+        </nav>
+        <section id="contenido">
+        <header>
+        <h1 style= "text-align: center;">Idioma</h1>
+        </header>
+            <br>
             <br>
             <br>
             <br>
@@ -25,6 +35,7 @@
         <br>
         <br>
         <br>
+        </div>
         <footer id="piePagina">
             Derechos reservados &COPY; 2023 <address class="lineaDireccion">Cedros Montes de Oca</address> <address class="lineaDireccion">8877-4411</address>
         </footer>
