--- a/src/main/resources/static/index1.html
+++ b/src/main/resources/static/index1.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Futbol Oficial</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css" />
+        <link href="css/menu.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <div>TODO write content</div>
+        <header class="header">
+            <nav class="nav">
+                <a href="index.html" class="logo nav-link">FutbolOficial</a>
+                <ul class="nav-menu">
+                    <li class="nav-meu-item"><a class="nav-menu-link nav-link" href="Partidos.html">Partidos</a></li>
+                    <li class="nav-meu-item"><a class="nav-menu-link nav-link" href="Marcadores.html">Marcadores</a></li>
+                    <li class="nav-meu-item"><a class="nav-menu-link nav-link" href="Idioma.html">Idioma</a></li>
+                    <li class="nav-meu-item"><a class="nav-menu-link nav-link" href="Highlights.html">Highlights</a></li>
+                    <li class="nav-meu-item"><a class="nav-menu-link nav-link" href="Equipos.html">Equipos</a></li>
+                    <li class="nav-meu-item"><a class="nav-menu-link nav-link" href="Cuenta.html">Cuenta</a></li>
+                    <li class="nav-meu-item"><a class="nav-menu-link nav-link" href="Competiciones.html">Competiciones</a></li>
+                </ul>
+            </nav>
+        </header>
+        
+        <aside id="barraLateral">
+            <h2>Que es Futbol Oficial</h2>
+            <p>Somos una pagina en linea sobre los acontecimientos mas importantes del futbol, con tus equipos favoritos, marcadores, partidos, highlights, para tener la mejor experiencia.</p>
+        </aside>    
+        <section id="contenido">
+            <br>
+            <br>
+            <br>
+            <h2>Noticias</h2>
+            <br>
+            <br>
+            <br>
+            <article>
+                <h1 style="text-align: center;">Top News</h1>
+                <h2 style= "text-align: center;">
+🔴 Barça-Sevilla EN VIVO. ¡En juego la segunda mitad el Camp Nou!
+
+Oportunidad de oro para encauzar LaLiga para el FC Barcelona. Tras la derrota del Madrid, el conjunto de Xavi Hernández recibe al Sevilla FC para cerrar la acción del domingo. Sigue con...</h2>
+                <figure>
+                    <img src="images/Noticia1.png" alt="Noticia 1" width="1000"/>
+                </figure>
+            </article>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <article>
+                <h1></h1>
+                <h1 style="text-align: center;"> 🚨 MARCA: COURTOIS, CASI DESCARTADO PARA EL MUNDIAL DE CLUBES</h1>
+                <figure>
+                    <img src="images/Noticia2.png" alt="Courtois" width="600"/>
+                    <figcaption>Malos augurios crecen sobre la participación de Thibaut Courtois en el Mundial de Clubes. Y es que tal y como adelanta Marca, las primeras exploraciones no son optimistas sobre la dolencia en el abductor del jugador.</figcaption>
+                </figure>
+        </section>
+        <footer id="piePagina">
+            Derechos reservados &COPY; 2023 <address class="lineaDireccion">Tibas, Colima</address> <address class="lineaDireccion">8877-4411</address>
+        </footer>
     </body>
 </html>
