--- a/src/main/resources/static/index1.html
+++ b/src/main/resources/static/index1.html
@@ -61,7 +61,7 @@ Oportunidad de oro para encauzar LaLiga para el FC Barcelona. Tras la derrota de
                 </figure>
         </section>
         <footer id="piePagina">
-            Derechos reservados &COPY; 2023 <address class="lineaDireccion">Tibas, Colima</address> <address class="lineaDireccion">8877-4411</address>
+            Derechos reservados &COPY; 2023 <address class="lineaDireccion">Cedros Montes de Oca</address> <address class="lineaDireccion">8877-4411</address>
         </footer>
     </body>
 </html>
